fixing footer bottom spacing on tablet

--- a/pages/case-study/CaseStudy.module.scss
+++ b/pages/case-study/CaseStudy.module.scss
@@ -204,6 +204,10 @@
       &.centered_image,
       &.image_with_text {
         margin-bottom: 80px;
+
+        &:last-of-type {
+          margin-bottom: 0;
+        }
       }
     }
   }
